--- a/category_shoot.html
+++ b/category_shoot.html
@@ -127,7 +127,7 @@
                     </div>
                 </form>        
             </div>
-            <script src="js/1.js"></script>
+            <script src="assets/js/1.js"></script>
         </div>
     </header>
    
@@ -176,7 +176,7 @@
     <footer>
       <h5> Copyright ©2023 Playtopia.</h5>
     </footer>
-    <script src="js/2.js"></script>
+    <script src="assets/js/2.js"></script>
   </body>
   </html>
   
