--- a/check.html
+++ b/check.html
@@ -125,7 +125,7 @@
                     </div>
                 </form>        
             </div>
-            <script src="js/1.js"></script>
+            <script src="assets/js/1.js"></script>
         </div>
     </header>
     <main style=" background-image: url('/image/14bg.jpg'); height: 890px;">
