--- a/cart.html
+++ b/cart.html
@@ -124,7 +124,7 @@
                     </div>
                 </form>        
             </div>
-            <script src="js/1.js"></script>
+            <script src="assets/js/1.js"></script>
         </div>
     </header>
     <main>
@@ -179,7 +179,7 @@
                         </div>
                     </div>
             </div>
-            <script src="js/cart.js"></script>
+            <script src="assets/js/cart.js"></script>
 
         </section>
     </main>
