--- a/category_adventure.html
+++ b/category_adventure.html
@@ -127,7 +127,7 @@
                     </div>
                 </form>        
             </div>
-            <script src="js/1.js"></script>
+            <script src="assets/js/1.js"></script>
         </div>
     </header>
    
