--- a/gift.html
+++ b/gift.html
@@ -123,7 +123,7 @@
                     </div>
                 </form>        
             </div>
-            <script src="js/1.js"></script>
+            <script src="assets/js/1.js"></script>
         </div>
     </header>
     <div class="height">
