--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     </div>
                 </form>        
             </div>
-            <script src="js/1.js"></script>
+            <script src="assets/js/1.js"></script>
         </div>
     </header>
 
@@ -145,7 +145,7 @@
                     <span class="dot"></span>
                     <span class="dot"></span>
                 </div>
-            <script src="js/index.js"> </script>
+            <script src="assets/js/index.js"> </script>
         </div>
        
 
