--- a/member.html
+++ b/member.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="assets/css/final.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
     <script src="https://kit.fontawesome.com/148425472e.js" crossorigin="anonymous"></script>
-    <script src="4.js"></script>
+    <script src="assets/4.js"></script>
 </head>
 <body>
     <header>
@@ -125,7 +125,7 @@
                     </div>
                 </form>        
             </div>
-            <script src="js/1.js"></script>
+            <script src="assets/js/1.js"></script>
         </div>
     </header>
     <main>
