--- a/qa.html
+++ b/qa.html
@@ -124,7 +124,7 @@
                     </div>
                 </form>        
             </div>
-            <script src="js/1.js"></script>
+            <script src="assets/js/1.js"></script>
         </div>
     </header>
 
