--- a/report.html
+++ b/report.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="assets/css/report.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
     <script src="https://kit.fontawesome.com/148425472e.js" crossorigin="anonymous"></script>
-    <script src="js/rep.js"></script> 
+    <script src="assets/js/rep.js"></script> 
 </head>
 <body>
     <header>
@@ -125,7 +125,7 @@
                     </div>
                 </form>        
             </div>
-            <script src="js/1.js"></script>
+            <script src="assets/js/1.js"></script>
         </div>
     </header>
     <main >
@@ -153,7 +153,7 @@
                         </div>
                         <div class="preview" style="float:left;background:#ffffff;height:320px;width:585px;text-align:center;z-index:1;"><p style="line-height: 300px;">圖片上傳區</p></div>
                     </form>
-                    <script src="js/rep.js"></script> 
+                    <script src="assets/js/rep.js"></script> 
                     <button class="submit-btn2">完成</button>
                 </form>
             </div>
