--- a/category_shoot.html
+++ b/category_shoot.html
@@ -135,7 +135,7 @@
   <source src="video/Apex Legends.mp4" type="video/mp4">
 </video>
 <main>
-    <section class="first" style=" background-image: url('/image/21bg.jpg');">
+    <section class="first" style=" background-image: url('/image/21bg.jpg')";>
         <div class="shooting">射擊</div>
         <div class="array">
           <div class="item">
